--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_maps_flutter:
+  geolocator: ^6.1.14
 
 
   # The following adds the Cupertino Icons font to your application.
